Time: 3 ms (91.12%), Space: 44.1 MB (70.05%) - LeetHub